...
            onPress={() => push("/miniapps/settings/glasses")}>
            <Icon name="settings" size={24} color={theme.colors.secondary_foreground} />
          </Button>
        </View>
      )}
      <View>
        <GlassesDisplayMirror fallbackMessage="Glasses Mirror" style={mirrorStyle} />
        <TouchableOpacity style={{position: "absolute", bottom: 10, right: 10}} onPress={navigateToFullScreen}>
          <Icon name="fullscreen" size={24} color={theme.colors.secondary_foreground} />
        </TouchableOpacity>
      </View>
      {isChina && (
        <Text style={{fontSize: 11, color: theme.colors.textDim, marginTop: 4, textAlign: "center"}}>
...
