...
        <AppIcon app={applet} style={themed($appIcon)} />
        <View style={themed($appInfo)}>
          <Text style={themed($appName)} numberOfLines={1} ellipsizeMode="tail">
            {applet.name}
          </Text>
          <View style={themed($tagContainer)}>
            <Badge text="Active" />
          </View>
        </View>
        {!applet.loading && (
          <TouchableOpacity
            onPress={handleStopApp}
            style={themed($closeButton)}
            activeOpacity={0.7}
            testID="stop-foreground-app"
            accessibilityLabel="Stop app">
            <Icon name="x" size={24} color={theme.colors.textDim} />
          </TouchableOpacity>
        )}
        <View style={themed($iconContainer)}>
          <Icon name="arrow-left" size={24} color={theme.colors.text} />
...
