...
        <View style={{justifyContent: "flex-start", flexDirection: "column"}}>
          <Text tx="pairing:instructions" className="text-2xl font-bold mb-4 text-secondary-foreground" />
          <Text
            className="text-lg text-secondary-foreground"
            text="1. Disconnect your G2 from within the Even Realities app, or uninstall the Even Realities app"
          />
          <Text className="text-lg text-secondary-foreground" text="2. Place your G2 in the charging case." />
        </View>
      </ScrollView>
    )
  }

  const R1Buttons = () => {
...
